# dep-map

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yml
examples/: analyze_package.py  quick_scan.py
src/dep_map/: __init__.py  analyzer.py  cli.py  graph.py  parser.py  scanner.py  visualizer.py
src/dep_map/web/: __init__.py  app.py
tests/: requirements.txt  test_graph.py  test_parser.py
